fixing Me_bundle path in index.html and adding temp styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 	<div id="_Me"></div>
-	<script src="./Me_bundle.js"></script>
+	<script src="./public/Me_bundle.js"></script>
 
 </body>
 </html>
